b2c/sfsc/src/objects/CaseFieldMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This Custom Setting holds field mapping between Salesforce Commerce Cloud Case Object and Service Cloud Case Object. This mapping is used in Rest Apex wrapper class</description>
    <fields>
        <fullName>CC_Attribute__c</fullName>
        <description>This field holds CC Attribute Name</description>
        <inlineHelpText>This field holds CC Attribute Name</inlineHelpText>
        <label>CC Attribute</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Patch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting check if this attribute will be patched in commerce cloud from CRM or not</description>
        <inlineHelpText>This setting check if this attribute will be patched in commerce cloud from CRM or not</inlineHelpText>
        <label>Enable Patch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting check if this attribute will be synchronised from commerce cloud or not</description>
        <inlineHelpText>This setting check if this attribute will be synchronised from commerce cloud or not</inlineHelpText>
        <label>Enable Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Api_Name__c</fullName>
        <description>This Field holds mapping between Service Cloud Object Attributes with Commerce Cloud request object attributes</description>
        <inlineHelpText>This Field holds mapping between Service Cloud Object Attributes with Commerce Cloud request object attributes</inlineHelpText>
        <label>Field Api Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CaseFieldMapping</label>
</CustomObject>